[tool.poetry]
name = "mreaiogram2"
version = "0.1.0"
description = ""
authors = ["akm77 <aleksey.kotryakhov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.25.1"
aiogram-dialog = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

